# raylib-conways-game

./: .gitignore  CMakeLists.txt  README.md  compile.sh  main.cpp  server.cpp
assets/scenes/: scene_0.cpp
assets/script/: game.cpp
include/nodepp/wasm/: sleep.cpp  ws.cpp
www/: index.js  index.wasm
